--- a/public/index.html
+++ b/public/index.html
@@ -476,7 +476,7 @@
         // Конфигурация сервера
         const WS_URL = window.location.hostname === 'localhost' 
             ? 'ws://localhost:10000' 
-            : 'wss://your-render-url.onrender.com'; // ЗАМЕНИТЕ на ваш URL
+            : 'wss://eat-293s.onrender.com'; // ЗАМЕНИТЕ на ваш URL
         
         const canvas = document.getElementById('gameCanvas');
         const ctx = canvas.getContext('2d');
